# ipc-in-cpp

./: CMakeLists.txt  README.md
inc/ipc/: FileDescriptor.hpp  SyscallError.hpp  Utils.hpp  errno_except.hpp  fd_device.hpp  fd_owner.hpp
inc/ipc/socket/: Address.hpp  Connection.hpp  Endpoint.hpp  Server.hpp  Type.hpp  address.hpp  connection.hpp  server.hpp  type.hpp
src/: address.cpp  connection.cpp  errno_except.cpp  fd_device.cpp  fd_owner.cpp  server.cpp  type.cpp
